<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_label">Settings</string>
    <string name="more_settings_label">More</string>
    <string name="display_settings">Display</string>
    <string name="brightness">Brightness level</string>
    <string name="auto_brightness_title">Adaptive brightness</string>
    <string name="auto_brightness_summary">Optimize brightness level for available light</string>
    <string name="condition_night_display_title">Night Light is on</string>
    <string name="keywords_display">screen, touchscreen</string>
    <string name="keywords_display_brightness_level">dim screen, touchscreen, battery</string>
    <string name="keywords_display_auto_brightness">dim screen, touchscreen, battery</string>
    <string name="keywords_display_night_display">dim screen, night, tint</string>
    <string name="night_mode_tile_label">Night mode</string>
    <string name="wifi_settings">Wi\u2011Fi</string>
    <string name="wifi_settings_summary">Set up &amp; manage wireless access points</string>
    <string name="wifi_starting">Turning Wi\u2011Fi on\u2026</string>
    <string name="wifi_stopping">Turning off Wi\u2011Fi\u2026</string>
    <string name="wifi_failed_forget_message">Failed to forget network</string>
    <string name="wifi_failed_connect_message">Failed to connect to network</string>
    <string name="wifi_setup_add_network">Add network</string>
    <string name="wifi_disabled">Wi\u2011Fi disabled</string>
    <string name="wifi_setup_connect">Connect</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_show_password">Show password</string>
    <string name="wifi_ssid">Network name</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_signal">Signal strength</string>
    <string name="wifi_status">Status</string>
    <string name="wifi_speed">Link speed</string>
    <string name="wifi_frequency">Frequency</string>
    <string name="wifi_ip_address">IP address</string>
    <string name="access_point_tag_key">access_point_tag_key</string>
    <string-array name="wifi_signals">
        <item>Poor</item>
        <item>Fair</item>
        <item>Good</item>
        <item>Excellent</item>
    </string-array>
    <string name="bluetooth_quick_toggle_title">Bluetooth</string>
    <string name="bluetooth_quick_toggle_summary">Turn on Bluetooth</string>
    <string name="bluetooth_settings">Bluetooth</string>
    <string name="bluetooth_disabled">Bluetooth disabled</string>
    <string name="bluetooth_settings_title">Bluetooth</string>
    <string name="bluetooth_settings_summary">Manage connections, set device name &amp; discoverability</string>
    <string name="bluetooth_talkback_computer">Computer</string>
    <string name="bluetooth_talkback_headset">Headset</string>
    <string name="bluetooth_talkback_phone">Phone</string>
    <string name="bluetooth_talkback_imaging">Imaging</string>
    <string name="bluetooth_talkback_headphone">Headphone</string>
    <string name="bluetooth_talkback_input_peripheral">Input Peripheral</string>
    <string name="bluetooth_talkback_bluetooth">Bluetooth</string>
    <string name="bluetooth_preference_paired_devices">Paired devices</string>
    <string name="bluetooth_preference_found_devices">Available devices</string>
    <string name="bluetooth_preference_no_paired_devices">No paired devices</string>
    <string name="bluetooth_preference_no_found_devices">No available devices</string>
    <string name="bluetooth_preference_paired_dialog_title">Paired device</string>
    <string name="bluetooth_preference_paired_dialog_name_label">Name</string>
    <string name="bluetooth_device_advanced_profile_header_title">Use for</string>
    <string name="wifi_ssid_hint">Change the name of the Bluetooth device</string>
    <string name="bluetooth_notif_ticker">Bluetooth pairing request</string>
    <string name="bluetooth_device_context_pair_connect">Pair &amp; connect</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_pairing_key_msg">Bluetooth pairing code</string>
    <string name="bluetooth_enable_alphanumeric_pin">PIN contains letters or symbols</string>
    <string name="bluetooth_enter_passkey_msg">Type the pairing code then press Return or Enter</string>
    <string name="bluetooth_pairing_request">Pair with <xliff:g id="device_name">%1$s</xliff:g>?</string>
    <string name="bluetooth_pairing_shares_phonebook">Allow <xliff:g id="device_name">%1$s</xliff:g> to access your contacts and call history</string>
    <string name="bluetooth_enter_pin_other_device">You may also need to type this PIN on the other device.</string>
    <string name="bluetooth_enter_passkey_other_device">You may also need to type this passkey on the other device.</string>
    <string name="bluetooth_pin_values_hint_16_digits">Must be 16 digits</string>
    <string name="bluetooth_pin_values_hint">Usually 0000 or 1234</string>
    <string name="bluetooth_notif_title">Pairing request</string>
    <string name="bluetooth_notif_message">Tap to pair with <xliff:g id="device_name">%1$s</xliff:g>.</string>
    <string name="bluetooth_error_title"></string>
    <string name="language_settings">Languages</string>
    <string name="sound_settings">Sound</string>
    <string name="ring_volume_title">Ring volume</string>
    <string name="navi_volume_title">Navigation volume</string>
    <string name="incoming_call_volume_title">Ringtone</string>
    <string name="notification_volume_title">Notification</string>
    <string name="media_volume_title">Media</string>
    <string name="media_volume_summary">Set volume for music and videos</string>
    <string name="alarm_volume_title">Alarm</string>
    <string name="applications_settings">App info</string>
    <string name="disable_text">Disable</string>
    <string name="enable_text">Enable</string>
    <string name="permissions_label">Permissions</string>
    <string name="application_version_label">Version: %1$s</string>
    <string name="runtime_permissions_summary_no_permissions_granted">No permissions granted</string>
    <string name="runtime_permissions_summary_no_permissions_requested">No permissions requested</string>
    <string name="data_usage_summary_title">Data usage</string>
    <string name="data_usage_app_summary_title">App data usage</string>
    <string name="force_stop">Force stop</string>
    <string name="computing_size">Computing\u2026</string>
    <plurals name="runtime_permissions_additional_count">
        <item quantity="one"><xliff:g id="count" example="1">%d</xliff:g> additional permission</item>
        <item quantity="other"><xliff:g id="count" example="10">%d</xliff:g> additional permissions</item>
    </plurals>
    <string name="system_setting_title">System</string>
    <string name="system_update_settings_list_item_title">System updates</string>
    <string name="system_update_settings_list_item_summary">""</string>
    <string name="firmware_version">Android version</string>
    <string name="security_patch">Android security patch level</string>
    <string name="model_info">Model</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="device_info_not_available">Not available</string>
    <string name="device_status_activity_title">Status</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary" product="default">Phone number, signal, etc.</string>
    <string name="about_settings">About</string>
    <string name="about_summary">Android <xliff:g id="version" example="6.0">%1$s</xliff:g></string>
    <string name="about_settings_summary">View legal info, status, software version</string>
    <string name="legal_information">Legal information</string>
    <string name="contributors_title">Contributors</string>
    <string name="manual">Manual</string>
    <string name="regulatory_labels">Regulatory labels</string>
    <string name="safety_and_regulatory_info">Safety &amp; regulatory manual</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="webview_license_title">System WebView License</string>
    <string name="wallpaper_attributions">Wallpapers</string>
    <string name="wallpaper_attributions_values">Satellite imagery providers:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky</string>
    <string name="settings_license_activity_title">Third-party licenses</string>
    <string name="settings_license_activity_unavailable">There is a problem loading the licenses.</string>
    <string name="settings_license_activity_loading">Loading\u2026</string>
    <string name="date_and_time_settings_title">Date &amp; time</string>
    <string name="date_and_time_settings_title_setup_wizard">Set date and time</string>
    <string name="date_and_time_settings_summary">Set date, time, time zone, &amp; formats</string>
    <string name="date_time_auto">Automatic date &amp; time</string>
    <string name="date_time_auto_summary">Use network-provided time</string>
    <string name="zone_auto">Automatic time zone</string>
    <string name="zone_auto_summary">Use network-provided time zone</string>
    <string name="date_time_24hour_title">24\u2011hour format</string>
    <string name="date_time_24hour">Use 24-hour format</string>
    <string name="date_time_set_time_title">Time</string>
    <string name="date_time_set_time">Set time</string>
    <string name="date_time_set_timezone_title">Time zone</string>
    <string name="date_time_set_timezone">Select time zone</string>
    <string name="date_time_set_date_title">Date</string>
    <string name="date_time_set_date">Set date</string>
    <string name="zone_list_menu_sort_alphabetically">Sort alphabetically</string>
    <string name="zone_list_menu_sort_by_timezone">Sort by time zone</string>
    <string name="date_picker_title">Date</string>
    <string name="time_picker_title">Time</string>
    <string name="user_add_user_menu">Add user</string>
    <string name="user_add_account_menu">Add account</string>
    <string name="user_delete_user_description">Delete user</string>
    <string name="user_new_user_name">New user</string>
    <string name="user_guest">Guest</string>
    <string name="user_switch">Switch</string>
    <string name="current_user_name">You (%1$s)</string>
    <string name="user_name_label">Name</string>
    <string name="user_summary_not_set_up">Not set up</string>
    <string name="edit_user_name_title">Edit user name</string>
    <string name="security_lock_password">Password</string>
    <string name="screen_lock_options">Screen lock options</string>
    <string name="set_screen_lock">Set a screen lock</string>
    <string name="choose_lock_pin_message">For security, set a PIN</string>
    <string name="choose_lock_pin_hints">PIN must be at least 4 digits</string>
    <string name="choose_lock_password_message">For security, set a password</string>
    <string name="choose_lock_password_hints">Password must be between 4-8 characters with at least 1 number</string>
    <string name="backspace_key">Backspace key</string>
    <string name="enter_key">Enter key</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
</resources>